--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -21,5 +23,9 @@
     "mongoose": "^6.3.3",
     "multer": "^1.4.4",
     "winston": "^3.7.2"
+  },
+  "engines": {
+    "node": "18.1.0",
+    "npm": "8.9.0"
   }
 }
